# Radiotherapy-Treatment-Planning-environment

./: .dockerignore  .gitignore  DEPLOY.sh  Dockerfile  PROJECT_CONTEXT.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  setup.py
.claude/: settings.json
app/: app.py
baseline/: evaluate.py  results.json  results_head_neck.json  results_pediatric_brain.json  results_prostate.json  train_ppo.py
radiotherapy_env/: __init__.py  env.py
radiotherapy_env/physics/: dose_calculator.py  dvh.py  phantom.py
radiotherapy_env/rendering/: dose_heatmap.py
radiotherapy_env/reward/: __init__.py  grader.py  reward_fn.py
radiotherapy_env/tasks/: __init__.py  base_task.py  head_neck.py  pediatric_brain.py  prostate.py
server/: app.py
tests/: test_env.py
